--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@adonisjs/core": "^5.3.0",
     "@adonisjs/lucid": "^16.3.2",
     "@adonisjs/repl": "^3.1.0",
+    "jsonwebtoken": "^8.5.1",
     "luxon": "^2.1.1",
     "phc-argon2": "^1.1.2",
     "proxy-addr": "^2.0.7",
